package inveox.srm.domain.model.enums;

public enum SRM_Event_Status {

    DLO_CONTANIER_RESULT_SENT,
    DLO_CONTANIER_RESULT_SENT_PENDING,
    BEST_IMAGE_UPLOADED,
    BEST_IMAGE_PENDING,
    MULTIFRAMES_IMAGES_UPLOADED,
    MULTIFRAMES_IMAGES_PENDING,
    HARDWARE_ALERT,
    METRIC_STATS
    
}
